# discord-bot-zion

./: .cache  .dockerignore  .editorconfig  .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  TODO.md  bot.py  build.sh  docker-compose.yml  logger.py  music.py  old_bot.py  pyproject.toml  requirements.txt  spotify.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/utils/: log.sh
.github/: commit-instructions.md  copilot-instructions.md
ci/: Jenkinsfile
old/: original_bot.py
src/: .env.example  __init__.py  __main__.py  bot.py  config.py  logger.py
src/cogs/: __init__.py  help.py  music.py
src/core/: __init__.py  shutdown.py  ytdl.py
src/utils/: __init__.py  terminal.py
tests/: test_music.py
