[project]
name = "discord_music_bot"
version = "0.1.0"
description = "A modular Discord music bot using discord.py and yt-dlp"
requires-python = ">=3.8"
authors = [
    {name = "Sir Byron"}
]
dependencies = [
    "discord.py>=2.0.0",
    "yt-dlp",
    "loguru"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"